--- a/src/container/App.css
+++ b/src/container/App.css
@@ -1,25 +1,42 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.Modal-open {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  width: 100%;
+  height: 100vh;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
+.Modal-open:after {
+  position: fixed;
+  content: '';
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.Modal {
+  position: fixed;
+  max-height: 90vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 20px;
-  color: white;
+  background: #fff;
+
+  z-index: 2;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+.Modal img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 @keyframes App-logo-spin {
